# minishell

./: .gitattributes  .gitignore  Makefile
.github/workflows/: c-cpp.yml
aux/: Dockerfile  LL_grammar.y  bad_detector.sh  commands.md  filtered_bash_grammar.y  first_augmented.md  first_augmented.txt  foobar.md  grammar.y  map_notes.md  minishell.y  minishell_map.csv  minishell_map_commands.md  notes.md  references.md  right_recursive_grammar.y  rl_leaks.supp
aux/grammar_processor/: Cargo.toml  corrected_bash_grammar.y
aux/grammar_processor/src/: main.rs
aux/grammars/: LL_grammar.y  calculator.y  calculator_first_aug.md  minishell_full.y  tinyshell.y
aux/treant/tree_html/: basic-example.css  basic-example.js  index.html
lib/libft/: Makefile
lib/libft/include/: libft.h  utils.h
lib/libft/test/: CMakeLists.txt  Makefile  test.c
lib/libft/test/Unity/: CMakeLists.txt
lib/libft/test/src/: main.c  test_atoi.c  test_bzero.c  test_calloc.c  test_ctype.c  test_memcmp.c  test_memcpy.c  test_memset.c  test_strchr.c  test_strdup.c  test_strlcat.c  test_strlcpy.c  test_strlen.c  test_strncmp.c  utils.c
log/: log.c
src/: interpreter.c  main.c  reduction.c  reduction.h  shell_init.c  t_symbol_stack.c  t_symbol_stack.h
src/command/: t_command.h
src/error/: error_repr.c  error_status_table.c  is_fatal_error.c  is_syscall_related.c  log_error.c  parse_error_exit_code.c  t_error.h
src/execute/: builtin.c  builtin.h  conditional.c  env.h  execute.c  execute.h  execute_conditional.c  execute_simple.c  file_is_directory.c  launch_simple_command.c  launch_simple_command_utils.c  pipeline.c  simple.c  subshell.c
src/execute/builtin/: builtin.c  builtin.h  cd.c  echo.c  env.c  exit.c  export.c  pwd.c  unset.c
src/execute/process/: fork.c  get_exit_status.c  kill.c  process.h  report_signal_related_exit.c  reset_tty_properties.c  wait_for_pipeline.c  wait_for_process.c  wait_through_signals.c
src/execute/t_env/: constructor.c  destructor.c  env_destroy.c  getter.c  make_envp.c  push.c  t_env.c  t_env.h  t_env_internals.c  t_env_internals.h
src/execute/t_fd_list/: close.c  t_fd_list.c  t_fd_list.h
src/execute/t_pid_list/: pidl_clear.c  pidl_last.c  pidl_new.c  pidl_pop.c  pidl_push.c  pop.c  push.c  t_pid_list.c  t_pid_list.h
src/io/t_io/: constructor.c  operations.c  t_io.h
src/io/t_redir_list/: apply_redirections.c  here_document.c  redirection_repr.c  t_redir_list.c  t_redir_list.h
src/log/: log.c  log.h  log_env.c  log_error.c  log_token.c  log_words.c  parse_tree_to_json.c  syntax_tree_to_json.c  tree_to_json.c
src/parse/: parse.c  parse.h  parse_command.c  t_parser.c  t_parser.h  t_symbol.c  t_symbol.h
src/parse/productions/: produce_cmd_prefix.c  produce_cmd_prefix_precedes.c  produce_cmd_prefix_rest.c  produce_cmd_suffix.c  produce_cmd_suffix_rest.c  produce_command.c  produce_complete_command.c  produce_complete_command_rest.c  produce_filename.c  produce_here_end.c  produce_io_file.c  produce_io_here.c  produce_io_redirect.c  produce_maybe_cmd_suffix.c  produce_pipeline.c  produce_pipeline_rest.c  produce_program.c  produce_redirect_list.c  produce_redirect_list_rest.c  produce_simple_command.c  produce_subshell.c  produce_subshell_precedes.c  produce_word_list.c  produce_word_list_rest.c  productions.h
src/parse/reduction/: associativity_inversal_internals.h  conditional_command_data.c  gather_leaves.c  invert_conditional_associativity.c  reduce_command.c  reduce_complete_command.c  reduce_pipeline.c  reduce_simple_command.c  reduce_simple_command_like.c  reduce_subshell.c  reduction.c  reduction.h  reduction_internals.h
src/parse/t_command/: command_destroy.c  conditional_command_constructor.c  constructor.c  destructor.c  destructors.c  empty.c  pipeline_constructor.c  properties.c  simple_command_constructor.c  subshell_constructor.c  t_command.c  t_command.h
src/parse/t_parse_tree/: parser.c  productions.h  t_parse_tree.h
src/parse/t_parser/: parser_push.c  t_parser.c  t_parser.h
src/parse/t_symbol/: t_symbol.c  t_symbol.h
src/parse/tokenize/: t_token.c  t_token.h  token_repr.c  tokenize.c  tokenize.h
src/redirection/t_io/: constructor.c  operations.c  t_io.h
src/redirection/t_redir_list/: apply_redirections.c  here_document.c  push.c  redir_kind.c  redirection_repr.c  t_redir_list.c  t_redir_list.h
src/shell/: cleanup.c  shell.h
src/signal/: handlers.c  interactive.c  noninteractive_readline.c  readline.c  signal.h
src/tokenize/: lexer_advance_peek.c  lexer_scan_next_token.c  lexer_scan_token.c  t_lexer.h  t_lexer_init.c  t_token.h  token_repr.c  tokenize.c  tokenize.h
src/tokenize/t_lexer/: lexer_advance_peek.c  lexer_internals.h  lexer_scan_metachar_operator.c  lexer_scan_next_token.c  lexer_scan_word.c  lexer_skip_whitespace.c  t_lexer.h  t_lexer_init.c
src/tokenize/t_token_list/: t_token_list.h  tkl_new.c  tkl_push_back.c
src/word/: expand.c  truncate_to_one_line_if_necessary.c  word.h  word_clone.c  word_has_quotes.c
src/word/expansions/: expand.c  expand.h  expand_internals.h  expand_variable.c  make_joined.c  (+8 more)
test/: CMakeLists.txt  fetch_gtest.cmake
test/src/dummy_test/: dummy_test.cpp
test/src/execution_test/: main.bats  main.py  main.sh
test/src/execution_test/CanTakeInfile/: Makefile
test/src/execution_test/tests/doc/: AllEmptyLines  AllEmptyLinesUnterminated  DelimiterIsEntirelyMatched  DelimiterIsQuoteRemoved  DelimiterIsQuoteRemovedAndConcatenated  EmptyUnterminated  InDifferentCommandWithArguments  InPipeline  ManyDocuments  ManyDocumentsInConditional  ManyDocumentsInNestedSubshell  ManyDocumentsInSubshell  ManyDocumentsUnterminated  MultiLine  SingleLine  UnterminatedMultiLine  WithSomeEmptyLines  WithSomeEmptyLinesUnterminated
test/src/expansion_test/: CMakeLists.txt  Variables.cpp  Variables.h  Words.cpp  Words.h  empty_expansion.cpp  expand.cpp  join.cpp  parse.cpp
test/src/lexer_test/: CMakeLists.txt  lexer.cpp  test.cpp  token_list.cpp  tokenize.cpp
test/src/parser_test/: CMakeLists.txt  Redirections.cpp  Redirections.h  Words.cpp  Words.h  parse_tree_test.cpp  parser_test.cpp
(+48 files in other folders)
